--- a/WordPress/Classes/ViewRelated/Domains/Domain registration/RegisterDomain.storyboard
+++ b/WordPress/Classes/ViewRelated/Domains/Domain registration/RegisterDomain.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,34 +17,41 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qRW-a0-uEt" userLabel="Table Container View">
-                                <rect key="frame" x="0.0" y="20" width="375" height="563"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="583"/>
                                 <connections>
                                     <segue destination="CFb-K0-jrQ" kind="embed" id="v6Z-QC-UcC"/>
                                 </connections>
                             </containerView>
                             <containerView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N47-hP-xDu" userLabel="Button Container View">
                                 <rect key="frame" x="0.0" y="583" width="375" height="84"/>
+                                <viewLayoutGuide key="safeArea" id="0hA-Vo-wWt"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="84" placeholder="YES" id="ATd-iH-oJG"/>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="84" id="j00-iE-vY5"/>
                                 </constraints>
-                                <viewLayoutGuide key="safeArea" id="0hA-Vo-wWt"/>
                             </containerView>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="qDC-aT-Sfz"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="N47-hP-xDu" firstAttribute="trailing" secondItem="hr1-AR-Kcc" secondAttribute="trailing" id="00z-KU-gma"/>
-                            <constraint firstItem="N47-hP-xDu" firstAttribute="bottom" secondItem="hr1-AR-Kcc" secondAttribute="bottom" id="CbP-Yl-3OZ"/>
+                            <constraint firstItem="N47-hP-xDu" firstAttribute="bottom" secondItem="hr1-AR-Kcc" secondAttribute="bottom" id="CbP-Yl-3OZ" userLabel="(Button Shown) Button Container View Bottom Constraint"/>
+                            <constraint firstItem="N47-hP-xDu" firstAttribute="top" secondItem="hr1-AR-Kcc" secondAttribute="bottom" id="EBi-Nl-kQw" userLabel="(Button Hidden) Button Container View.top = bottom"/>
                             <constraint firstAttribute="trailing" secondItem="qRW-a0-uEt" secondAttribute="trailing" id="NvV-4f-UXu"/>
                             <constraint firstItem="qRW-a0-uEt" firstAttribute="leading" secondItem="hr1-AR-Kcc" secondAttribute="leading" id="Owz-yP-dfr"/>
                             <constraint firstItem="N47-hP-xDu" firstAttribute="leading" secondItem="hr1-AR-Kcc" secondAttribute="leading" id="aq0-ab-Svm"/>
                             <constraint firstItem="qRW-a0-uEt" firstAttribute="top" secondItem="qDC-aT-Sfz" secondAttribute="top" id="g17-8h-gCH"/>
                             <constraint firstItem="N47-hP-xDu" firstAttribute="top" secondItem="qRW-a0-uEt" secondAttribute="bottom" id="kYJ-aF-Uio"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="qDC-aT-Sfz"/>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="EBi-Nl-kQw"/>
+                            </mask>
+                        </variation>
                     </view>
                     <connections>
-                        <outlet property="buttonContainerViewBottomConstraint" destination="CbP-Yl-3OZ" id="SgM-zd-bS0"/>
+                        <outlet property="buttonContainerHiddenConstraint" destination="EBi-Nl-kQw" id="adJ-NG-OIs"/>
+                        <outlet property="buttonContainerShownConstraint" destination="CbP-Yl-3OZ" id="UrS-wo-3co"/>
                         <outlet property="buttonContainerViewHeightConstraint" destination="j00-iE-vY5" id="TES-Ic-0gY"/>
                         <outlet property="buttonViewContainer" destination="N47-hP-xDu" id="wQG-3m-IgK"/>
                     </connections>
@@ -60,7 +65,7 @@
             <objects>
                 <viewController id="CFb-K0-jrQ" customClass="RegisterDomainSuggestionsTableViewController" customModule="WordPress" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="UYc-Bx-TlF">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="563"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="583"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
